# predictive-maintenance-showcase

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  makefile
.github/worflows/: ml-model.yaml
.github/workflows/: go-audit.yml  ml-facade.yaml  ml-model.yaml  ml_service.yaml  pre-commit.yaml
docs/: CONTRIBUTING.md  setup.md
grafana/dashboards/: monitoring_machine_7.json
grafana/provisioning/dashboards/: dashboard.yaml
grafana/provisioning/datasources/: postgres.yaml
ml_facade/: .dockerignore  Dockerfile  compose.yaml  go.mod  go.sum  makefile  test_endpoint.sh  threshold_setup.sh
ml_facade/app/: app.go  errors.go  handlers.go  healthcheck.go  helpers.go  routes.go
ml_facade/cmd/: main.go
ml_facade/cmd/app/: app.go
ml_facade/config/: config.go
ml_facade/internal/api/: errors.go  handler_health.go  handler_predict.go  handler_threshold.go  helpers.go  middleware.go  routes.go  server.go
ml_facade/internal/consumer/: consume.go  rabbitmq_consumer.go
ml_facade/internal/data/: model_response.go  models.go  sensors.go  threshold.go
ml_facade/internal/models/postgres_models/: ml_service_response.go  sensors.go
ml_facade/internal/models/redis_models/: threshold.go
ml_facade/internal/service/: client.go  handler.go  handler_test.go
ml_facade/migrations/: 000001_create_monitoring_table.down.sql  000001_create_monitoring_table.up.sql
ml_facade/tests/: handlers_test.go  helpers.go  main_test.go
ml_model/: .pre-commit-config.yaml  README.md  makefile  pyproject.toml
ml_model/src/ml_model/: __init__.py  bentofile.yaml  clean.py  evaluate.py  helpers.py  load.py  main.py  model.py  preprocess.py  service.py  split.py  train.py  utils.py
ml_model/tests/: conftest.py  test_model.py  test_train.py
ml_service/: Cargo.toml  Dockerfile  test_endpoint.sh
ml_service/configuration/: base.yaml  local.yaml  production.yaml
ml_service/src/: app.rs  configuration.rs  lib.rs  main.rs
ml_service/src/routes/: healthcheck.rs  mod.rs  predict.rs
scripts/send_data/: data.go  go.mod  go.sum  helpers.go  main.go  makefile  pyproject.toml
scripts/send_data/src/send_data/: main.py
templates/: .env.template  grafana.env.template  production.env.template
