[project]
name = "ml-model"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jordan Delbar", email = "jordandelbar@gmail.com" }
]
dependencies = [
    "polars>=0.20.30",
    "loguru>=0.7.2",
    "torch>=2.3.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "kaggle>=1.6.14",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml_model"]
