[project]
name = "ml-model"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jordan Delbar", email = "jordandelbar@gmail.com" }
]
dependencies = [
    "polars>=0.20.30",
    "loguru>=0.7.2",
    "torch>=2.3.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "notebook>=7.2.0",
    "pandas>=2.2.2",
    "pyarrow>=16.1.0",
    "pydantic>=2.7.2",
    "bentoml>=1.2.16",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "kaggle>=1.6.14",
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml_model"]
