[package]
name = "ml-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"  # Use the latest version
config = { version = "0.14", default-features = false, features = ["yaml"] }
csv = "1.3.0"
ndarray = "0.16.0"
ort = {  version = "2.0.0-rc.5", features = ["ndarray"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
