[project]
name = "send-data"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jordan Delbar", email = "jordandelbar@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "polars>=0.20.16",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/send_data"]
